--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,13 +12,13 @@
   <body>
 
     <div class="top">
-      <h1>Mr. Uziel's Physics Game Page</h1>
+      <h1>CS50W Final Project: Quiz Games</h1>
     </div>
 
     <div class="nav">
       <a href="{{ url_for('index') }}">home</a>
-      <a href="{{ url_for('teacher') }}">teacher</a>
-      <a href="{{ url_for('login') }}">login</a>
+      <a href="{{ url_for('teacher') }}">teacher page</a>
+      <a href="{{ url_for('login') }}">login/register</a>
       <a href="{{ url_for('logout') }}">logout</a>
     </div>
 
