creating question elements

--- a/templates/game.html
+++ b/templates/game.html
@@ -38,6 +38,10 @@
     <button type="submit" class="btn btn-primary">Submit Answer</button>
   </form>
 
+  <hr><hr><hr>
+
+  <div id="answers">ANSWERS</div>
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script type="text/javascript" src="/static/game.js"></script>
 
