--- a/templates/game.html
+++ b/templates/game.html
@@ -8,39 +8,10 @@
 
   <h1>{{ game.game_name }}</h1>
 
-  <p id="message_received">Mess received?  NO!</p>
-
   <h4>{{ result }}</h4>
   <h4>Next question:</h4>
 
-  {{ question.question }}
-  <br>
-
-  <form action="" method="post">
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="submitted_answer" value="A" required>
-      <label id="label_a" class="form-check-label"></label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="submitted_answer" value="B" required>
-      <label class="form-check-label">{{ question.choice_b }}</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="submitted_answer" value="C" required>
-      <label class="form-check-label">{{ question.choice_c }}</label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="submitted_answer" value="D" required>
-      <label class="form-check-label">{{ question.choice_d }}</label>
-    </div>
-    <input type="hidden" name="question_number" value="{{ question.question_id }}">
-    <br>
-    <button type="submit" class="btn btn-primary">Submit Answer</button>
-  </form>
-
-  <hr><hr><hr>
-
-  <div id="answers">ANSWERS</div>
+  <div id="question_received">Question Recieved</div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script type="text/javascript" src="/static/game.js"></script>
