--- a/templates/game.html
+++ b/templates/game.html
@@ -6,14 +6,12 @@
 
 {% block body %}
 
-  <h1>{{ game.game_name }}</h1>
+  <h1>Welcome, {{ student }}</h1>
 
-  <h4>{{ result }}</h4>
-  <h4>Next question:</h4>
+  <p>TEACHER: {{ teacher }}, STUDENT: {{ student }}</p>
 
-  <div id="question_received">Question Recieved</div>
+  <div id="question_received"><em>Please wait until {{ teacher }} begins the game.</em></div>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
   <script type="text/javascript" src="/static/game.js"></script>
 
 {% endblock %}
