--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -6,14 +6,14 @@
 
 {% block body %}
 
-  <h1>Welcome, {{ user.name }}</h1>
+  <h1>Welcome, {{ teacher.name }}</h1>
 
   <h4>Create a game:</h4>
   <form action="{{ url_for('create_new_game') }}" method="post">
     <div class="form-group">
       <input type="text" class="form-control" name="game_name" placeholder="Enter a name for your game" required>
     </div>
-    <div>Select the questions you wold like to have in your game:</div>
+    <div>Select the questions you would like to have in your game:</div>
     {% for question in questions %}
       <div class="form-check">
         <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
@@ -67,7 +67,7 @@
   <h4>Choose a game:</h4>
   <ul>
     {% for game in games %}
-      <li><a href="{{ url_for('game_control', teacher='uziel', game_name=game.game_name) }}">{{ game.game_name }}</a></li>
+      <li><a href="{{ url_for('game_control', teacher=teacher.username, game_name=game.game_name) }}">{{ game.game_name }}</a></li>
    {% endfor %}
   </ul>
 
