need to add inner join and games field to students

--- a/templates/end.html
+++ b/templates/end.html
@@ -22,6 +22,16 @@
     {% endfor %}
   </ol>
 
+  <ol>
+    {% for question in questions %}
+    <li>
+      {{ question.question }} <br>
+      Correct Answer: <strong>{{ question.answer }}</strong> <br>
+      You chose:
+    </li>
+    {% endfor %}
+  </ol>
+
 
 
 
