--- a/templates/game.html
+++ b/templates/game.html
@@ -15,6 +15,9 @@
 
   <div id="question_received"><em>Please wait until {{ teacher }} sends the next question.</em></div>
 
+  <div><strong>NOTE: You may not change answers once submitted!</strong></div>
+  <div>{{ message }}</div>
+
   <!-- Needed to transmit inofrmation to game.js to send through sockets -->
   <div id="student_id" hidden>{{ student.student_id }}</div>
 
