fixed repeating, now need to select for game

--- a/templates/end.html
+++ b/templates/end.html
@@ -10,7 +10,7 @@
 
   <h3>{{ student.student_name }}</h3>
 
-  {{ results_list[0] }}
+  <h3>Your score: {{ score }}%</h3>
 
   <ol>
     {% for result in results_list %}
@@ -25,45 +25,5 @@
     </li>
     {% endfor %}
   </ol>
-
-  <ol>
-    {% for x in student %}
-    <li>
-      {{ x }} <br>
-      {{ x.questions_answered }} <br>
-      {{ x.submitted_answers}} <br>
-      {{ x.results }}
-    </li>
-    {% endfor %}
-  </ol>
-
-  <ol>
-    {% for answer in student.results %}
-    <li>
-      {% if answer %}
-        correct
-      {% else %}
-        wrong
-      {% endif %}
-    </li>
-    {% endfor %}
-  </ol>
-
-  <ol>
-    {% for question in questions %}
-    <li>
-      {{ question.question }} <br>
-      (A) {{ question.choice_a }} <br>
-      (B) {{ question.choice_b }} <br>
-      (C) {{ question.choice_c }} <br>
-      (D) {{ question.choice_d }} <br>
-      Correct Answer: <strong>{{ question.answer }}</strong> <br>
-      You chose:
-    </li>
-    {% endfor %}
-  </ol>
-
-
-
 
 {% endblock %}
