--- a/templates/end.html
+++ b/templates/end.html
@@ -1,29 +1,11 @@
 {% extends "layout.html" %}
 
 {% block title %}
-  Game Page
+  End
 {% endblock %}
 
 {% block body %}
 
   <h1>Game Over!</h1>
-
-  <h3>{{ student.student_name }}</h3>
-
-  <h3>Your score: {{ score }}%</h3>
-
-  <ol>
-    {% for result in results_list %}
-    <li>
-      {{ result.question }}<br>
-      (A) {{ result.choice_a }}<br>
-      (B) {{ result.choice_b }}<br>
-      (C) {{ result.choice_c }}<br>
-      (D) {{ result.choice_d }}<br>
-      Correct answer: <strong>{{ result.answer }}</strong><br>
-      Your Answer: <em>{{ result.submitted_answer}} </em><br>&nbsp;
-    </li>
-    {% endfor %}
-  </ol>
 
 {% endblock %}
