--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,7 +29,10 @@
       <a href="{{ url_for('teacher') }}">teacher page</a>
       <a href="{{ url_for('student') }}">student page</a>
       <a href="{{ url_for('login') }}">login/register</a>
+      {% if session.teacher_id %}
       <a href="{{ url_for('logout') }}">logout</a>
+      {% endif %}
+
     </div>
 
     <div class="rest">
