--- a/templates/results.html
+++ b/templates/results.html
@@ -8,16 +8,19 @@
 
   <h4>{{ teacher.name }}</h4>
 
-  {{ results }}
-
-
   <ol>
     {% for result in results %}
     <li>
-      {{ result.students_name }}<br>
-      {{ result.questions_in_game }}<br>
-      {{ result.student_answers }}<br>
-      {{ result.student_results}}
+      {{ result.students_name }}: {{ result.score }}<br>
+      <ol>
+        {% for x in range(num_questions) %}
+          <li>
+            {{ result.questions_in_game[x] }}<br>
+            {{ result.student_answers[x] }}<br>
+            {{ result.student_results[x] }}
+          </li>
+        {% endfor %}
+      </ol>
     </li>
     {% endfor %}
   </ol>
@@ -34,7 +37,6 @@
   <button id="end_game" class="btn btn-block btn-danger">END GAME</button>
 
   <!-- needed to get information into end_game.js -->
-
   <div id="game_id" hidden>{{ game.game_id }}</div>
   <div id="teacher_username" hidden>{{ teacher.username }}</div>
   <div id="teacher_id" hidden>{{ teacher.teacher_id }}</div>
