more unknown errors

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,14 @@
 {% endblock %}
 
 {% block body %}
-  
+
   <div class="flex-layout">
     <div>
       <form action="login" method="post">
         <div class="form-group user-form">
-          <b>Log in:</b>
-          <input class="form-control" name="username" placeholder="username">
-          <input class="form-control" name="password" placeholder="password" type="password">
+          <b>Log in:</b><br>&nbsp;
+          <input class="form-control" name="username" placeholder="username"><br>
+          <input class="form-control" name="password" placeholder="password" type="password"><br>
           <button class="btn btn-primary">Login</button>
         </div>
       </form>
@@ -20,11 +20,11 @@
     <div>
       <form action="register" method="post">
         <div class="form-group user-form">
-          <b>Register:</b>
-          <input class="form-control" name="name" placeholder="Name">
-          <input class="form-control" name="username" placeholder="Username">
-          <input class="form-control" name="email" placeholder="Email" type="email">
-          <input class="form-control" name="password" placeholder="Password" type="password">
+          <b>Register:</b><br>&nbsp;
+          <input class="form-control" name="name" placeholder="Name"><br>
+          <input class="form-control" name="username" placeholder="Username"><br>
+          <input class="form-control" name="email" placeholder="Email" type="email"><br>
+          <input class="form-control" name="password" placeholder="Password" type="password"><br>
           <button class="btn btn-primary">Register</button>
         </div>
       </form>
