--- a/static/styles.css
+++ b/static/styles.css
@@ -1,14 +1,15 @@
 body {
   margin: 20px;
 }
-
-h1, h2, h3, h4, h5, h6{
+h1{
   text-align: center;
 }
+
 .error{
   color: red;
   font-size: 1.2em;
 }
+
 .form-check{
   margin-left: 20px;
 }
