--- a/templates/game_control.html
+++ b/templates/game_control.html
@@ -15,20 +15,24 @@
   <button id="submit_question" class="btn btn-block btn-primary">SEND Next Question</button><br>
 
   <strong>Questions in the game:</strong>
-  <ol id="upcoming_questions">
-    {% for question in questions %}
-      <li>
-        <div class="game-questions" id="question{{ question.id }}">
-          {{ question.question}} <br>
-          A) {{ question.choice_a }} <br>
-          B) {{ question.choice_b }} <br>
-          C) {{ question.choice_c }} <br>
-          D) {{ question.choice_d }} <br>
-          Correct Answer: <strong>{{ question.answer }}</strong>
-        </div>
-      </li>
-    {% endfor %}
-  </ol>
+  {% if questions %}
+    <ol id="upcoming_questions">
+      {% for question in questions %}
+        <li>
+          <div class="game-questions" id="question{{ question.id }}">
+            {{ question.question}} <br>
+            A) {{ question.choice_a }} <br>
+            B) {{ question.choice_b }} <br>
+            C) {{ question.choice_c }} <br>
+            D) {{ question.choice_d }} <br>
+            Correct Answer: <strong>{{ question.answer }}</strong>
+          </div>
+        </li>
+      {% endfor %}
+    </ol>
+  {% else %}
+    <p>This game has no questions associated with it.</p>
+  {% endif %}
 
   <!-- needed to get information into game_control.js -->
   <div id="game_name" hidden>{{ teacher.active_game }}</div>
