--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -8,21 +8,46 @@
 
   <h1>Welcome, {{ teacher.name }}</h1>
 
-  <h4>Create a game:</h4>
-  <form action="{{ url_for('create_new_game') }}" method="post">
-    <div class="form-group">
-      <input type="text" class="form-control" name="game_name" placeholder="Enter a name for your game" required>
-    </div>
-    <div>Select the questions you would like to have in your game:</div>
-    {% for question in questions %}
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
-        <label class="form-check-label" for="questions">{{ question.question }}</label>
+  {% if games %}
+    <h4>Choose a game:</h4>
+    <ul>
+        {% for game in games %}
+          <li>
+            <div class="form-inline">
+              <a href="{{ url_for('game_control', teacher=teacher.username, game_name=game.game_name) }}">{{ game.game_name }}</a>
+              <form class="form-inline" action="{{ url_for('delete_game') }}" method="post">
+                <!--<button class="btn" type="submit" name="game_name" value="{{ game.game_name }}"><i class="fa fa-trash"></i></button>-->
+                <button class="btn btn-link btn-sm" type="submit" name="game_name" value="{{ game.game_name }}">[<u>delete</u>]</button>
+              </form>
+            </div>
+          </li>
+       {% endfor %}
+    </ul>
+  {% else %}
+     <p>To begin, you need to create a game first.</p>
+  {% endif %}
+
+  {% if questions %}
+    <h4>Create a game:</h4>
+    <form action="{{ url_for('create_new_game') }}" method="post">
+      <div class="form-group">
+        <input type="text" class="form-control" name="game_name" placeholder="Enter a name for your game">
       </div>
-    {% endfor %}
-    <br>
-    <button type="submit" class="btn btn-primary">Create New Game</button>
-  </form>
+      <div>Select the questions you would like to have in your game:</div>
+        {% for question in questions %}
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
+            <label class="form-check-label" for="questions">{{ question.question }}</label>
+          </div>
+        {% endfor %}
+      <br>
+      <button type="submit" class="btn btn-primary btn-sm" name="create_game" value="create_game">Create Game</button>
+      <button type="submit" class="btn btn-danger btn-sm" name="delete_question" value="delete_question">Delete selected questions</button>
+    </form>
+
+  {% else %}
+    <p>To create a game, add questions first.</p>
+  {% endif %}
 
   {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
@@ -35,7 +60,7 @@
   {% endwith %}
 
   <br>
-  <h4>Add a question to the database:</h4>
+  <h4>Add a Question:</h4>
   <form action="{{ url_for('add_new_question') }}" method="post">
     <div class="form-group">
       <input type="text" class="form-control" name="question" placeholder="Question" required>
@@ -70,16 +95,7 @@
       <label class="form-check-label" for="inlineRadio2">D</label>
     </div>
     <br><br>
-    <button type="submit" class="btn btn-primary">Add Question</button>
+    <button type="submit" class="btn btn-primary btn-sm">Add Question</button>
   </form>
-
-  <br>
-  <h4>Choose a game:</h4>
-  <ul>
-    {% for game in games %}
-      <li><a href="{{ url_for('game_control', teacher=teacher.username, game_name=game.game_name) }}">{{ game.game_name }}</a></li>
-   {% endfor %}
-  </ul>
-
 
 {% endblock %}
