--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
   <body>
 
     <div class="top">
-      <h1>CS50WW Final Project: Quiz Games</h1>
+      <h1>CS50W Final Project: Quiz Games</h1>
     </div>
 
     <div class="nav">
