--- a/templates/game_controlBBB.html
+++ b/templates/game_controlBBB.html
@@ -12,12 +12,15 @@
   <strong>Question now in play:</strong>
   <p id="active-question">No questions sent yet.</p>
 
+  <button id="submit_question" class="btn btn-block btn-primary">SEND Next Question</button><br>
+
   <strong>Questions in the game:</strong>
   {% if questions %}
     <ol id="upcoming_questions">
       {% for question in questions %}
         <li>
-          <div class="game-questions" id="question{{ question.question_id }}">
+          <div class="game-questions" id="question{{ question.id }}">
+            <button type="button" class="btn btn-sm btn-link">Send</button>
             {{ question.question}} <br>
             A) {{ question.choice_a }} <br>
             B) {{ question.choice_b }} <br>
@@ -31,8 +34,6 @@
   {% else %}
     <p>This game has no questions associated with it.</p>
   {% endif %}
-
-  <button id="show_results" class="btn btn-block btn-danger">End Game / Show Results</button><br>
 
   <!-- needed to get information into game_control.js -->
   <div id="game_name" hidden>{{ teacher.active_game }}</div>
