--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -38,6 +38,7 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
             <label class="form-check-label" for="questions">{{ question.question }}</label>
+            <a href="{{ url_for('edit_question', question_id=question.question_id )}}"> [edit]</a>
           </div>
         {% endfor %}
       <br>
