--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,12 @@ body {
 h1{
   text-align: center;
 }
-
+.btn-link{
+  font-size:500%;
+  text-decoration: none;
+  text-decoration: underline;
+  text-decoration: none !important;
+}
 .error{
   color: red;
   font-size: 1.2em;
