--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -17,7 +17,8 @@
               <a href="{{ url_for('game_control', teacher=teacher.username, game_name=game.game_name) }}">{{ game.game_name }}</a>
               <form class="form-inline" action="{{ url_for('delete_game') }}" method="post">
                 <!--<button class="btn" type="submit" name="game_name" value="{{ game.game_name }}"><i class="fa fa-trash"></i></button>-->
-                <button class="btn btn-link btn-sm" type="submit" name="game_name" value="{{ game.game_name }}">[<u>delete</u>]</button>
+                <button class="btn btn-link" type="submit" name="game_name" value="{{ game.game_name }}">[<u>delete</u>]</button>
+                <a href="{{ url_for('edit_game', game_id=game.game_id )}}"> [edit]</a>
               </form>
             </div>
           </li>
@@ -37,8 +38,10 @@
         {% for question in questions %}
           <div class="form-check">
             <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
-            <label class="form-check-label" for="questions">{{ question.question }}</label>
-            <a href="{{ url_for('edit_question', question_id=question.question_id )}}"> [edit]</a>
+            <label class="form-check-label" for="questions">
+              {{ question.question }}
+              <a href="{{ url_for('edit_question', question_id=question.question_id )}}"> [edit]</a>
+            </label>
           </div>
         {% endfor %}
       <br>
