--- a/templates/edit_game.html
+++ b/templates/edit_game.html
@@ -6,7 +6,33 @@
 
 {% block body %}
 
-  <p><strong>Editing Game {{ game.game_name }}</strong></p>
+  <p><strong>Editing {{ game.game_name }}</strong></p>
+
+  {% if questions %}
+    <form action="{{ url_for('edit_game', game_id=game.game_id) }}" method="post">
+      <div class="form-group form-inline">
+        <label class="form-check-label" for="game_name">Edit game name:&nbsp;&nbsp;</label>
+        <input type="text" class="form-control" name="game_name" value="{{ game.game_name }}">
+      </div>
+      <div>Edit the questions you would like to have in your game:</div>
+        {% for question in questions %}
+          <div class="form-check">
+            {% if question.question_id in question_list %}
+            <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}" checked>
+            {% else %}
+            <input class="form-check-input" type="checkbox" name="questions" value="{{ question.question_id }}">
+            {% endif %}
+            <label class="form-check-label" for="questions">{{ question.question }}</label>
+          </div>
+        {% endfor %}
+      <br>
+      <button type="submit" class="btn btn-primary btn-sm" name="create_game" value="create_game">Create Game</button>
+      <button type="submit" class="btn btn-danger btn-sm" name="delete_question" value="delete_question">Delete selected questions</button>
+    </form>
+
+  {% else %}
+    <p>To create a game, add questions first.</p>
+  {% endif %}
 
 
 {% endblock %}
