--- a/templates/edit_game.html
+++ b/templates/edit_game.html
@@ -26,8 +26,7 @@
           </div>
         {% endfor %}
       <br>
-      <button type="submit" class="btn btn-primary btn-sm" name="create_game" value="create_game">Create Game</button>
-      <button type="submit" class="btn btn-danger btn-sm" name="delete_question" value="delete_question">Delete selected questions</button>
+      <button type="submit" class="btn btn-primary btn-sm" name="create_game" value="edit_game">Save Changes</button>
     </form>
 
   {% else %}
