--- a/templates/layout.html
+++ b/templates/layout.html
@@ -20,28 +20,31 @@
   </head>
 
   <body>
+    <div class="main">
 
-    <div class="top">
-      <h1>CS50W Final Project: Quiz Games</h1>
-    </div>
+      <div class="top">
+        <h1>CS50W Final Project: Quiz Games</h1>
+      </div>
 
-    <div class="nav">
-      <a href="{{ url_for('index') }}">home</a>
-      {% if not session.student_id %}
-      <a href="{{ url_for('teacher') }}">teacher page</a>
-      {% endif %}
-      {% if not session.teacher_id %}
-      <a href="{{ url_for('student') }}">student page</a>
-      {% endif %}
-      {% if session.teacher_id %}
-      <a href="{{ url_for('logout') }}">logout</a>
-      {% endif %}
+      <div class="nav">
+        <a href="{{ url_for('index') }}">home</a>
+        {% if not session.student_id %}
+        <a href="{{ url_for('teacher') }}">teacher page</a>
+        {% endif %}
+        {% if not session.teacher_id %}
+        <a href="{{ url_for('student') }}">student page</a>
+        {% endif %}
+        {% if session.teacher_id %}
+        <a href="{{ url_for('logout') }}">logout</a>
+        {% endif %}
 
-    </div>
+      </div>
 
-    <div class="rest">
-      {% block body %}
-      {% endblock %}
+      <div class="rest">
+        {% block body %}
+        {% endblock %}
+      </div>
+      
     </div>
 
   </body>
