sort of working

--- a/templates/game_control.html
+++ b/templates/game_control.html
@@ -35,7 +35,7 @@
 
       <button id="calculate_results" class="btn btn-block btn-danger">End Game / Calculate Results</button><br>
     </div>
-    <div class="student-results">
+    <div class="student-results" id="show_students_in_room">
       YOU
     </div>
   </div>
