--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
         {% if not session.teacher_id %}
         <a href="{{ url_for('student') }}">student page</a>
         {% endif %}
-        {% if session.teacher_id %}
+        {% if session.teacher_id or session.student_id %}
         <a href="{{ url_for('logout') }}">logout</a>
         {% endif %}
 
@@ -44,7 +44,7 @@
         {% block body %}
         {% endblock %}
       </div>
-      
+
     </div>
 
   </body>
