--- a/templates/results.html
+++ b/templates/results.html
@@ -13,7 +13,7 @@
   <ul style="list-style-type:none;">
     {% for result in results %}
     <li>
-      <div class="game-questions">
+      <div class="show-result-details">
       {{ result.students_name }}: {{ result.score }}%<br>
         <ol>
           {% for x in range(num_questions) %}
