--- a/static/styles.css
+++ b/static/styles.css
@@ -53,7 +53,14 @@ a{
   overflow: visible;
   height: 100%;
 }
-div.game-questions:hover{
+.show-result-details{
+  cursor: pointer;
+  height: 1.5em;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+div.show-result-details:hover{
   padding: 4px 10px;
   border-radius: 4px;
   background-color: #eef;
